# tartempion

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
doc/source/: api_doc.rst  conf.py  index.rst  user_guide.rst
tartempion/: __main__.py
tartempion/tartes/: __init__.py  tarte.py  tarte_cerise.py  tarte_pomme.py
tests/: test_tartempion.py
